@@ -10,6 +10,9 @@ Version 6.4.13
     "searchpath" zum Setzen des Suchpfades.
   - CString unterstützt Ausgabe als Stream
   - Erkennung der FreeTDS-Library erneuert
+  - CDateTime Genauigkeit auf Mikrosekunden erhöht
+  - Format des Integer-Wertes von CDateTime::longInt hat sich geändert
+    und ist inkompatibel zu vorher.
 
 Version 6.4.12  vom 04.04.2012	(CVS-Tag: REL_6_4_12)
   - Datenbank: Strings werden nun in Hochkommata statt Anführungszeichen
